tests/baselines/reference/commentOnImportStatement3.errors.txt
==== tests/cases/compiler/commentOnImportStatement3.ts (1 errors) ====
    /* copyright */
    
    /* not copyright */
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find external module './foo'.